# qds

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml  lint.yml  linting.yml  test.yml
changelog.d/: 20220909_213924_kamil.turek.md  20220927_221842_kamil.turek.md  20221014_210404_kamil.turek_retrieving_display_parameters.md  20221114_232702_kamil.turek_missing_changelog.md  20221114_235639_kamil.turek_readme.md  20230318_145612_kamil.turek_display_configuration.md  20230318_210535_kamil.turek_abandon_poetry.md
qds/: __init__.py  api.py  bindings.py  cdefs.py  clib.py  cstructs.py  display.py  lib.py  lib.pyi  structs.py
qds/bindings/: quartz.py  types.py
qds/cqds/: types.py
qds/lib/: quartz.py
qds/pyqds/: main.py
requirements/: base.txt  dev.txt
tests/: test_display.py
tests/test_cqds/: test_main.py
