[tool.poetry]
name = "python-qds"
version = "0.2.0"
description = "A Python wrapper for Quartz Display Services."
authors = [
    { name = "Kamil Turek" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kamilturek/qds"
packages = [
    { include = "qds" },
]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"

[tool.isort]
profile = "black"

[tool.mypy]
enable_error_code = [
    "truthy-bool",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "-m",
    "not integration",
]
markers = [
    "integration",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
pytest = "^7.1.3"

[tool.scriv]
format = "md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
