[project]
name = "python-qds"
version = "0.2.0"
description = "A Python wrapper for Quartz Display Services."
authors = [
    { name = "Kamil Turek" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kamilturek/qds"
packages = [
    { include = "qds" },
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "scriv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.scriv]
format = "md"
