[project]
name = "python-qds"
version = "0.2.0"
authors = [
    { name = "Kamil Turek" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "pip-tools",
    "pre-commit",
    "pytest",
    "scriv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.scriv]
format = "md"
